# rs_go

./: Cargo.toml  README.md  build.rs
src/: main.rs
src/rs_go/: mod.rs  rs_go.go
